# informes-cev-minvu-db

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  PROMPT.md  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
docs/: AGENTS.md  DEPLOY.md  MANUAL.md
phase0/: REPORT.md
phase0/scripts/: cev_coords.py  extract_page6.py  test_a_coordinates.py
phase1/: README.md  scale_summary.json
phase1/scripts/: build_templates_multi.py  digit_templates.pkl  download_sample.py  make_evidence.py  ocr_easyocr.py  ocr_page6.py  ocr_templates.py  run_scale.py
phase12/: REPORT.md
phase2/: REPORT.md
phase3/: REPORT.md
phase4/: REPORT.md  REPORT_SCHEMA.md
phase5/: REPORT.md
phase6/: REPORT.md
phase8/: REPORT.md
phase9/: REPORT.md
src/informes_cev_minvu_db/: admin_tasks.py  app.py  cli.py  config.py  diagnostic.py  scheduler.py
src/informes_cev_minvu_db/db/: models.py  seed.py  session.py
src/informes_cev_minvu_db/discovery/: html_parser.py  portal_client.py  run.py
src/informes_cev_minvu_db/mirror/: nocode.py  sync.py
src/informes_cev_minvu_db/pdf/: coordinates.py  digit_templates.pkl  downloader.py  extract_all.py  extractor.py  ocr_page6.py  version_detect.py
src/informes_cev_minvu_db/pipeline/: backfill.py  cleanup.py  daily.py  persist.py  process.py  queue.py
src/informes_cev_minvu_db/transform/: normalize.py
tests/: conftest.py  test_daily.py  test_diagnostic.py  test_downloader.py  test_extraction.py  test_normalize.py  test_pipeline_db.py  test_portal_client.py  test_queue.py  test_resilience.py
