[project]
name = "informes-cev-minvu-db"
version = "0.1.0"
description = "ELT system for Chile MINVU CEV v2 energy-rating reports"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "lxml>=5.3",
    "pymupdf>=1.24",
    "opencv-python-headless>=4.10",
    "pytesseract>=0.3.13",
    "numpy>=1.26",
    "pillow>=10.4",
    "apscheduler>=3.10",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
cev = "informes_cev_minvu_db.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/informes_cev_minvu_db"]
artifacts = ["*.pkl"]
force-include = { "src/informes_cev_minvu_db/pdf/digit_templates.pkl" = "informes_cev_minvu_db/pdf/digit_templates.pkl" }

[tool.ruff]
line-length = 110
